--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Channel Crossing
 email: secretary@sailsignet.org.uk
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://channelcrossing.sailsignet.org.uk" # the base hostname & protocol for your site
+url: "https://signet60.sailsignet.org.uk" # the base hostname & protocol for your site
 
 twitter_username:
 github_username:
